--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,22 +9,25 @@
     tools:context=".MainActivity">
 
     <EditText
+        android:id="@+id/contentEdt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="전달할 내용 입력"
+        android:hint="전달 할 내용 입력"
         android:singleLine="true"/>
 
     <Button
+        android:id="@+id/okBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="확인"/>
 
     <TextView
+        android:id="@+id/resultTxt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:padding="10dp"
-        android:text="전달받은 내용 출력 자리"
+        android:text="전달 받은 내용 출력 자리"
         android:textSize="20sp"/>
 
 </LinearLayout>
